--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ stages:
     - task: CmdLine@2
       inputs:
         script: |
-          run npm install
+          npm install
           npm run build
     - task: PublishBuildArtifacts@1
       inputs:
